[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Level/Enemy Environments/Spinning Laser/SpinningLaser.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level/Enemy Environments/Sc_LaserCaster.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0001.png" type="Texture" id=3]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0014.png" type="Texture" id=4]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0013.png" type="Texture" id=5]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0012.png" type="Texture" id=6]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0000.png" type="Texture" id=7]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0003.png" type="Texture" id=8]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0010.png" type="Texture" id=9]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0005.png" type="Texture" id=10]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0008.png" type="Texture" id=11]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0011.png" type="Texture" id=12]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0006.png" type="Texture" id=13]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0002.png" type="Texture" id=14]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0007.png" type="Texture" id=15]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0004.png" type="Texture" id=16]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_Dreh/Zwei_Laser/0009.png" type="Texture" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 3 ) ],
"loop": true,
"name": "SpinningLaser",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[node name="SpinningLaser" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
rotationSpeed = 180.0
currentColor = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="LaserGenerator" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 4 )
animation = "SpinningLaser"

[node name="RotationNode" type="Position2D" parent="."]
position = Vector2( 0, -3 )

[node name="LaserCaster" parent="RotationNode" instance=ExtResource( 2 )]
material = SubResource( 3 )
position = Vector2( 0, -15.5 )
rotation = -1.57079

[node name="LaserCaster2" parent="RotationNode" instance=ExtResource( 2 )]
position = Vector2( 0, 11.5 )
rotation = 1.5708
